Adds a missing translation

--- a/po/no/kpaint.po
+++ b/po/no/kpaint.po
@@ -225,7 +225,7 @@ msgstr "Områdevalg"
 
 #: kpaint.cpp:352
 msgid "Round Angle"
-msgstr ""
+msgstr "Avrunnet firkant"
 
 #: kpaint.cpp:357
 msgid "Show Tools Toolbar"
